# smartlog

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  deny.toml  mkdocs.yml
.cargo/: audit.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  changelog.md  contributing.md  index.md  installation.md  usage.md
packaging/aur/: PKGBUILD
packaging/winget/: FelipeMorandini.smartlog.installer.yaml  FelipeMorandini.smartlog.locale.en-US.yaml  FelipeMorandini.smartlog.yaml
src/: app.rs  config.rs  event_loop.rs  inputs.rs  layout.rs  lib.rs  parser.rs  sources.rs  terminal.rs  theme.rs  ui.rs
tests/: cli.rs
