[package]
name = "smartlog"
version = "0.2.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["Felipe Pires Morandini <felipepiresmorandini@gmail.com>"]
description = "A high-performance TUI for log tailing. Auto-detects JSON, syntax highlights errors, and filters streams in real-time. Built in Rust."
license = "MIT"
repository = "https://github.com/felipemorandini/smartlog"
homepage = "https://github.com/felipemorandini/smartlog"
documentation = "https://github.com/felipemorandini/smartlog#readme"
readme = "README.md"
keywords = ["tui", "log", "tail", "json", "viewer"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "smartlog"
path = "src/bin/smartlog.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3"
ratatui = "0.29.0"
regex = "1"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

